--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "express": "3.3.7",
-    "jade": "*",
+    "ejs": "*",
     "sparql": "*",
     "websocket": "*",
     "serialport": "*"
