rfidgeek in node

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "ejs": "*",
     "express-ejs-layouts": "*",
     "sparql": "*",
-    "websocket": "*",
-    "serialport": "*"
+    "rfidgeek": "*"
   }
 }
