--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "mocha"
   },
   "dependencies": {
     "express": "3.3.7",
@@ -11,5 +12,10 @@
     "express-ejs-layouts": "*",
     "sparql": "*",
     "rfidgeek": "*"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "expect.js": "*",
+    "supertest": "*"
   }
 }
