--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aktive-shelves",
   "version": "0.0.1",
   "private": true,
+  "repository": "https://gihub.com/digibib/node_rfidgeek.git",
   "scripts": {
     "start": "node app.js",
     "test": "mocha"
@@ -11,7 +12,7 @@
     "ejs": "*",
     "express-ejs-layouts": "*",
     "sparql": "*",
-    "rfidgeek": ">=0.0.4"
+    "rfidgeek": ">=0.0.5"
   },
   "devDependencies": {
     "mocha": "*",
