fix integration test

--- a/config/example.settings.json
+++ b/config/example.settings.json
@@ -1,4 +1,4 @@
 {
   "endpoint": "http://data.deichman.no/sparql",
-  "base_uri": "http://data.deichman.no"
+  "base_uri": "http://data.deichman.no/resource/tnr_"
 }
