added minion and topfile for salt

--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -1,4 +1,4 @@
-#require 'vagrant-salt'
+require 'vagrant-salt'
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
@@ -8,14 +8,14 @@ Vagrant::Config.run do |config|
   # please see the online documentation at vagrantup.com.
 
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "lubuntu_1304_vagrant"
+  config.vm.box = "lubuntu_mini"
 
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
   # config.vm.box_url = "http://domain.com/path/to/above.box"
   
   # Boot with a GUI so you can see the screen. (Default is headless)
-  #config.vm.boot_mode = :gui
+  config.vm.boot_mode = :gui
   
   # Assign this VM to a host-only network IP, allowing you to access it
   # via the IP. Host-only networks can talk to the host machine as well as
@@ -38,13 +38,12 @@ Vagrant::Config.run do |config|
   # config.vm.share_folder "v-data", "/vagrant_data", "../data"
 
   ## For masterless, mount your salt file root
-  config.vm.share_folder "salt_file_root", "/srv/salt/", "/home/jenkins/salt"
+  config.vm.share_folder "salt_file_root", "/srv", "salt"
 
   ## Use all the defaults:
   config.vm.provision :salt do |salt|
-
-    salt.minion_config = "/home/jenkins/salt/minion.conf"
+    salt.minion_config = "minion.conf"
     salt.run_highstate = true
-
+    salt.salt_install_type = "stable"
   end
 end
