--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -8,7 +8,7 @@ Vagrant::Config.run do |config|
   # please see the online documentation at vagrantup.com.
 
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "lubuntu_mini"
+  config.vm.box = "lubuntu_1304_32b"
 
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
@@ -38,11 +38,11 @@ Vagrant::Config.run do |config|
   # config.vm.share_folder "v-data", "/vagrant_data", "../data"
 
   ## For masterless, mount your salt file root
-  config.vm.share_folder "salt_file_root", "/srv", "salt"
+  config.vm.share_folder "salt_file_root", "/srv/salt", "./salt"
 
   ## Use all the defaults:
   config.vm.provision :salt do |salt|
-    salt.minion_config = "minion.conf"
+    salt.minion_config = "./salt/minion.conf"
     salt.run_highstate = true
     salt.salt_install_type = "stable"
   end
