--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-ejs-layouts": "*",
     "errorhandler": "*",
     "express-favicon": "*",
+    "express-session": "*",
     "errorhandler": "*",
     "morgan": "*",
     "body-parser": "*",
