--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "aktive-shelves",
+  "name": "aktive-shelves-webapp",
   "version": "0.0.1",
   "private": true,
-  "repository": "https://gihub.com/digibib/node_rfidgeek.git",
-  "scripts": {
-    "start": "node app.js",
-    "test": "mocha"
-  },
+  "repository": "https://gihub.com/digibib/aktive-shelves-webapp.git",
   "dependencies": {
-    "express": "3.3.7",
-    "ejs": "*",
-    "express-ejs-layouts": "*",
-    "sparql": "*",
-    "rfidgeek": ">=0.0.5"
+    "sparql": "*"
   },
   "devDependencies": {
-    "mocha": "*",
-    "expect.js": "*",
-    "supertest": "*"
+    "rollup": "^0.49.3",
+    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-svelte": "^3.1.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "serve": "^6.4.1"
+  },
+  "scripts": {
+    "build": "rollup -c -w",
+    "dev": "serve public & rollup -c -w",
+    "start": "serve public",
+    "test": "mocha"
   }
 }
