--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "rollup -c -w",
     "devold": "serve public & rollup -c -w",
-    "dev": "node app2.js & rollup -c -w",
+    "dev": "node app.js & rollup -c -w",
     "start": "serve public",
     "test": "mocha"
   }
